--- a/server/Makefile
+++ b/server/Makefile
@@ -55,7 +55,7 @@ run: $(DIR_BIN)/$(BIN)
 $(DIR_BIN)/$(BIN): $(OBJS)
 	$(CC_CPP) $(OBJS) $(CC_LIBS) -o $(DIR_BIN)/$(BIN)
 
-$(DIR_OBJ)/Main.o: $(DIR_SRC)/Main.cpp
+$(DIR_OBJ)/main.o: $(DIR_SRC)/main.cpp
 	$(CC_CPP) $(CC_FLAGS) -I$(DIR_INC) -D__USE_MINGW_ANSI_STDIO=1 -c $< -o $@
   
 $(DIR_OBJ)/Misc.o: $(DIR_SRC)/Misc.cpp $(DIR_INC)/Misc.h
